examples/good/auto_return2.latf
auto f() {
    return 1;
}

auto i() {
    if (true) {
        return 1;
    }
    else {}
    return 0; // OK
}

auto k() {
    while (true) {
        return 1;
    }
    return 0; // OK
}

auto k() {
    while (true) {}
    return 0; // OK
}

auto l() {
    if (true) {
        return 1;
    }
    else {
        return 2;
    }
    // OK - it's staticaly known that this line is unreachable due to the return statements in both branches
}

int main() {
    return 0;
}